优化网关接口